fixed numbers to align with ordered list text on chrome browsers

--- a/05B/styles.css
+++ b/05B/styles.css
@@ -52,6 +52,8 @@ a:hover {
 
 ol {
   font-size: 18px;
+  text-align: center;
+  list-style-position: inside;
 }
 
 h2 {
